--- a/lib/android/app/build.gradle
+++ b/lib/android/app/build.gradle
@@ -96,9 +96,9 @@ android {
 
     testOptions {
         unitTests.all { t ->
-            reports {
+            /* reports {
                 html.enabled true
-            }
+            } */
             testLogging {
                 events "PASSED", "SKIPPED", "FAILED", "standardOut", "standardError"
             }
